Update repository meta information

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Florent Revest <florent.revest@free-electrons.com>
 Maxime Ripard <maxime.ripard@bootlin.com>
 Paul Kocialkowski <paul.kocialkowski@bootlin.com>
+Max Schettler <max.schettler@posteo.de>
